// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additionalProperties.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    var v3 = false;
    if (v1 === \\"foo\\") {
      v3 = true;
    }
    if (v1 === \\"bar\\") {
      v3 = true;
    }
    if (v1.match(/^v/)) {
      v3 = true;
    }
    if (v3 === false) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`additionalProperties.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    var v3 = false;
    if (v1 === \\"foo\\") {
      v3 = true;
    }
    if (v1 === \\"bar\\") {
      v3 = true;
    }
    if (v3 === false) {
      if (!(typeof v2 === 'boolean')) {
        v0.push(true);
      }
    }
  }
}
return v0;"
`;

exports[`additionalProperties.json matches snapshot 3`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    if (!(typeof v2 === 'boolean')) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`additionalProperties.json matches snapshot 4`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
  }
  var v2 = json.bar;
  if (v2 !== undefined) {
  }
}
return v0;"
`;

exports[`allOf.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.bar;
  if (v1 !== undefined) {
    if (!(typeof v1 === 'number' && v1 % 1 === 0)) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.bar === undefined) {
    v0.push(true);
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v2 = json.foo;
  if (v2 !== undefined) {
    if (!(typeof v2 === 'string')) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.foo === undefined) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`allOf.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
    if (!(typeof v1 === 'string')) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.foo === undefined) {
    v0.push(true);
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v2 = json.baz;
  if (v2 !== undefined) {
    if (!(v2 === null)) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.baz === undefined) {
    v0.push(true);
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v3 = json.bar;
  if (v3 !== undefined) {
    if (!(typeof v3 === 'number' && v3 % 1 === 0)) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.bar === undefined) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`allOf.json matches snapshot 3`] = `
"var v0 = [];
if (typeof json === 'number') {
  if (json > 30) {
    v0.push(true);
  }
}
if (typeof json === 'number') {
  if (json < 20) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`anyOf.json matches snapshot 1`] = `
"var v0 = [];
var v1 = 0;
var v2;
v2 = false;
if (!(typeof json === 'number' && json % 1 === 0)) {
  v2 = true;
}
v2 && v1++;
v2 = false;
if (typeof json === 'number') {
  if (json < 2) {
    v2 = true;
  }
}
v2 && v1++;
if (v1 === 2) {
  v0.push(true);
}
return v0;"
`;

exports[`anyOf.json matches snapshot 2`] = `
"var v0 = [];
var v1 = 0;
var v2;
v2 = false;
if (typeof json === 'string') {
  if (json.length > 2) {
    v2 = true;
  }
}
v2 && v1++;
v2 = false;
if (typeof json === 'string') {
  if (json.length < 4) {
    v2 = true;
  }
}
v2 && v1++;
if (v1 === 2) {
  v0.push(true);
}
if (!(typeof json === 'string')) {
  v0.push(true);
}
return v0;"
`;

exports[`default.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
    if (!(typeof v1 === 'number' && v1 % 1 === 0)) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`default.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.bar;
  if (v1 !== undefined) {
    if (typeof v1 === 'string') {
      if (v1.length < 4) {
        v0.push(true);
      }
    }
    if (!(typeof v1 === 'string')) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`enum.json matches snapshot 1`] = `
"var v0 = [];
var v1 = 0;
if (json === 1) {
  v1++;
}
if (json === 2) {
  v1++;
}
if (json === 3) {
  v1++;
}
if (v1 === 0) {
  v0.push(true);
}
return v0;"
`;

exports[`enum.json matches snapshot 2`] = `
"var v0 = [];
var v1 = 0;
if (json === 6) {
  v1++;
}
if (json === \\"foo\\") {
  v1++;
}
if (JSON.stringify(json) === '[]') {
  v1++;
}
if (json === true) {
  v1++;
}
if (JSON.stringify(json) === '{\\"foo\\":12}') {
  v1++;
}
if (v1 === 0) {
  v0.push(true);
}
return v0;"
`;

exports[`enum.json matches snapshot 3`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
    var v2 = 0;
    if (v1 === \\"foo\\") {
      v2++;
    }
    if (v2 === 0) {
      v0.push(true);
    }
  }
  var v3 = json.bar;
  if (v3 !== undefined) {
    var v4 = 0;
    if (v3 === \\"bar\\") {
      v4++;
    }
    if (v4 === 0) {
      v0.push(true);
    }
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.bar === undefined) {
    v0.push(true);
  }
}
if (!(json && typeof json === 'object' && !Array.isArray(json))) {
  v0.push(true);
}
return v0;"
`;

exports[`items.json matches snapshot 1`] = `
"var v0 = [];
if (Array.isArray(json)) {
  var v1 = 0;
  for (; v1 < json.length; v1++) {
  if (!(typeof json[v1] === 'number' && json[v1] % 1 === 0)) {
    v0.push(true);
  }
  }
}
return v0;"
`;

exports[`items.json matches snapshot 2`] = `
"var v0 = [];
var v1 = json[0];
if (v1 !== undefined) {
  if (!(typeof v1 === 'number' && v1 % 1 === 0)) {
    v0.push(true);
  }
}
var v2 = json[1];
if (v2 !== undefined) {
  if (!(typeof v2 === 'string')) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`maxItems.json matches snapshot 1`] = `
"var v0 = [];
if (Array.isArray(json)) {
  if (json.length > 2) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`maxLength.json matches snapshot 1`] = `
"var v0 = [];
if (typeof json === 'string') {
  if (json.length > 2) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`maxProperties.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (Object.keys(json).length > 2) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`maximum.json matches snapshot 1`] = `
"var v0 = [];
if (typeof json === 'number') {
  if (json > 3) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`maximum.json matches snapshot 2`] = `
"var v0 = [];
if (typeof json === 'number') {
  if (json >= 3) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`minItems.json matches snapshot 1`] = `
"var v0 = [];
if (Array.isArray(json)) {
  if (json.length < 1) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`minLength.json matches snapshot 1`] = `
"var v0 = [];
if (typeof json === 'string') {
  if (json.length < 2) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`minProperties.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (Object.keys(json).length < 1) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`minimum.json matches snapshot 1`] = `
"var v0 = [];
if (typeof json === 'number') {
  if (json < 1.1) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`minimum.json matches snapshot 2`] = `
"var v0 = [];
if (typeof json === 'number') {
  if (json <= 1.1) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`not.json matches snapshot 1`] = `
"var v0 = [];
var v1 = false;
if (!(typeof json === 'number' && json % 1 === 0)) {
  v1 = true;
}
if (!v1) {
  v0.push(true);
}
return v0;"
`;

exports[`not.json matches snapshot 2`] = `
"var v0 = [];
var v1 = false;
if (!((typeof json === 'number' && json % 1 === 0) || (typeof json === 'boolean'))) {
  v1 = true;
}
if (!v1) {
  v0.push(true);
}
return v0;"
`;

exports[`not.json matches snapshot 3`] = `
"var v0 = [];
var v1 = false;
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v2 = json.foo;
  if (v2 !== undefined) {
    if (!(typeof v2 === 'string')) {
      v1 = true;
    }
  }
}
if (!(json && typeof json === 'object' && !Array.isArray(json))) {
  v1 = true;
}
if (!v1) {
  v0.push(true);
}
return v0;"
`;

exports[`not.json matches snapshot 4`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
    var v2 = false;
    if (!v2) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`oneOf.json matches snapshot 1`] = `
"var v0 = [];
var v1 = 0;
var v2;
v2 = false;
  if (!(typeof json === 'number' && json % 1 === 0)) {
    v2 = true;
  }
v2 && v1++;
v2 = false;
  if (typeof json === 'number') {
    if (json < 2) {
      v2 = true;
    }
  }
v2 && v1++;
if (v1 !== 2 - 1) {
  v0.push(true);
}
return v0;"
`;

exports[`oneOf.json matches snapshot 2`] = `
"var v0 = [];
var v1 = 0;
var v2;
v2 = false;
  if (typeof json === 'string') {
    if (json.length < 2) {
      v2 = true;
    }
  }
v2 && v1++;
v2 = false;
  if (typeof json === 'string') {
    if (json.length > 4) {
      v2 = true;
    }
  }
v2 && v1++;
if (v1 !== 2 - 1) {
  v0.push(true);
}
if (!(typeof json === 'string')) {
  v0.push(true);
}
return v0;"
`;

exports[`pattern.json matches snapshot 1`] = `
"var v0 = [];
if (typeof json === 'string') {
  if (!json.match(/^a*$/)) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`pattern.json matches snapshot 2`] = `
"var v0 = [];
if (typeof json === 'string') {
  if (!json.match(/a+/)) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`patternProperties.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    if (v1.match(/f.*o/)) {
      if (!(typeof v2 === 'number' && v2 % 1 === 0)) {
        v0.push(true);
      }
    }
  }
}
return v0;"
`;

exports[`patternProperties.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    if (v1.match(/a*/)) {
      if (!(typeof v2 === 'number' && v2 % 1 === 0)) {
        v0.push(true);
      }
    }
    if (v1.match(/aaa*/)) {
      if (typeof v2 === 'number') {
        if (v2 > 20) {
          v0.push(true);
        }
      }
    }
  }
}
return v0;"
`;

exports[`patternProperties.json matches snapshot 3`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    if (v1.match(/[0-9]{2,}/)) {
      if (!(typeof v2 === 'boolean')) {
        v0.push(true);
      }
    }
    if (v1.match(/X_/)) {
      if (!(typeof v2 === 'string')) {
        v0.push(true);
      }
    }
  }
}
return v0;"
`;

exports[`properties.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
    if (!(typeof v1 === 'number' && v1 % 1 === 0)) {
      v0.push(true);
    }
  }
  var v2 = json.bar;
  if (v2 !== undefined) {
    if (!(typeof v2 === 'string')) {
      v0.push(true);
    }
  }
}
return v0;"
`;

exports[`properties.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  for (var v1 in json) {
    var v2 = json[v1];
    var v3 = false;
    if (v1 === \\"foo\\") {
      if (Array.isArray(v2)) {
        if (v2.length > 3) {
          v0.push(true);
        }
      }
      if (!(Array.isArray(v2))) {
        v0.push(true);
      }
      v3 = true;
    }
    if (v1 === \\"bar\\") {
      if (!(Array.isArray(v2))) {
        v0.push(true);
      }
      v3 = true;
    }
    if (v1.match(/f.o/)) {
      if (Array.isArray(v2)) {
        if (v2.length < 2) {
          v0.push(true);
        }
      }
      v3 = true;
    }
    if (v3 === false) {
      if (!(typeof v2 === 'number' && v2 % 1 === 0)) {
        v0.push(true);
      }
    }
  }
}
return v0;"
`;

exports[`required.json matches snapshot 1`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
  }
  var v2 = json.bar;
  if (v2 !== undefined) {
  }
}
if (json && typeof json === 'object' && !Array.isArray(json)) {
  if (json.foo === undefined) {
    v0.push(true);
  }
}
return v0;"
`;

exports[`required.json matches snapshot 2`] = `
"var v0 = [];
if (json && typeof json === 'object' && !Array.isArray(json)) {
  var v1 = json.foo;
  if (v1 !== undefined) {
  }
}
return v0;"
`;

exports[`type.json matches snapshot 1`] = `
"var v0 = [];
if (!(typeof json === 'number' && json % 1 === 0)) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 2`] = `
"var v0 = [];
if (!(typeof json === 'number')) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 3`] = `
"var v0 = [];
if (!(typeof json === 'string')) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 4`] = `
"var v0 = [];
if (!(json && typeof json === 'object' && !Array.isArray(json))) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 5`] = `
"var v0 = [];
if (!(Array.isArray(json))) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 6`] = `
"var v0 = [];
if (!(typeof json === 'boolean')) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 7`] = `
"var v0 = [];
if (!(json === null)) {
  v0.push(true);
}
return v0;"
`;

exports[`type.json matches snapshot 8`] = `
"var v0 = [];
if (!((typeof json === 'number' && json % 1 === 0) || (typeof json === 'string'))) {
  v0.push(true);
}
return v0;"
`;
